<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical"
        >
	    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_glympse_title"
            android:textAllCaps="true"
        />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:background="#30FFFFFF"
        />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8sp"
                android:text="@string/subtype_prompt"
            />
            
            <EditText
                android:id="@+id/edit_subtype"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/subtype_default"
                android:singleLine="true"
                android:inputType="text"
            />
            
        </LinearLayout>        
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8sp"
                android:text="@string/brand_prompt"
            />
            
            <EditText
                android:id="@+id/edit_brand"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/brand_default"
                android:singleLine="true"
                android:inputType="text"
            />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8sp"
                android:text="@string/duration_prompt"
            />
            
            <EditText
                android:id="@+id/edit_duration"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/duration_default"
                android:singleLine="true"
                android:inputType="number"
            />
            
        </LinearLayout>
        
        <Button
	        android:id="@+id/button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_glympse_button"
            android:onClick="onClickButtonCreate"
	    />
        
        <TextView
            android:id="@+id/text_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
        />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/view_glympse_title"
            android:textAllCaps="true"
        />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:background="#30FFFFFF"
        />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
		    <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8sp"
	            android:text="@string/buffer_prompt"
	        />
	        
		    <EditText
	            android:id="@+id/edit_buffer"
	            android:layout_width="0px"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
                android:lines="4"
                android:text="@string/buffer_default"
                android:inputType="text"
	        />
		    
        </LinearLayout>
	    
	    <Button
            android:id="@+id/button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/view_glympse_button"
            android:onClick="onClickButtonView"
        />

    </LinearLayout>

</ScrollView>
